Dodaj drugi sposób Omnivelmy

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -11,6 +11,7 @@
 \usepackage{textcomp}
 \usepackage{float}
 \usepackage{listings}
+\usepackage[ampersand]{easylist}
 
 \begin{document}
 \input{title.tex}
