--- a/docs/readme
+++ b/docs/readme
@@ -9,3 +9,5 @@ Masa omnivelmy.
 Masa kół.
 I omnivelmy i kół.
 Tarcie podłoża nazwane Flooria
+
+Przetestować Vrepowy sposób jeśli joint będzie miał własnego linka, którego pozycję już można resetować.
