--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -12,19 +12,23 @@ Mihai Olimpiu Tătar, Cătălin Popovici, Dan Mândru, Ioan Ardelean, Alin Pleş
 Conference: 2014 IEEE International Conference on Automation, Quality and Testing, Robotics (AQTR)
 
 \bibitem{gazebo_website}
-Strona internetowa symulatora Gazebo.
+Strona internetowa symulatora Gazebo. \\
 \url{http://gazebosim.org}
 
 \bibitem{vrep_website}
-Strona internetowa symulatora V-Rep.
+Strona internetowa symulatora V-Rep. \\
 \url{http://coppeliarobotics.com}
 
 \bibitem{ros_website}
-Strona internetowa platformy programistycznej \emph{Robot Operating System}.
+Strona internetowa platformy programistycznej \emph{Robot Operating System}. \\
 \url{http://www.ros.org}
 
 \bibitem{sdf_website}
-Strona internetowa standardu SDF.
+Strona internetowa standardu SDF. \\
 \url{http://sdformat.org/spec}
+
+\bibitem{ode_contact}
+Dokumentacja maszyny ODE z wyjaśnieniem działania kolizji. \\
+\url{http://ode-wiki.org/wiki/index.php?title=Manual:_Joint_Types_and_Functions#Contact}
 
 \end{thebibliography}
