--- a/docs/model.tex
+++ b/docs/model.tex
@@ -196,6 +196,54 @@ Takie zachowanie oczywiście dalekie jest od oryginału.
 Wygląda na to, że problemem było wewnętrzne traktowanie przegubów przez maszynę symulacyjną.
 Takie nienaturalne zachowanie jak nagła zmiana osi przegubu musiała wprowadzać nieprawdopodobne wartości do zmiennych stanu, co w rezultacie powodowało po pewnym czasie chaotyczny ruch.
 
+\subsection{Modyfikacja kierunków i wartości wektorów tarcia}
+Warto tu wytłumaczyć, w jaki sposób maszyny symulacji fizyki interpretują kolizję i dotyk.
+
+\begin{figure}[H]
+\centering
+ \includegraphics[width=0.5\textwidth]{graphics/friction.pdf}
+\caption{Wektory punktu kolizji.}
+\end{figure} 
+
+Po wykryciu punktu kolizji i wyznaczeniu wektora normalnych $N$ do dotykających się obiektów należy zadziałać odpowiednimi siłami, aby zatrzymać, lub odbić obiekty.
+Dodatkowo ponieważ prędkości obiektów nie muszą być równoległe do wektora kolizji, należy zasymulować siłę tarcia z odpowiednią dla współczynnika tarcia wartością.
+Można to uzyskać nadając punktowi siłę prostopadłą do wektora normalnych, ten wektor może być rozpisany przy pomocy dwóch wektorów jednostkowych $F_1$ i $F_2$. 
+Te wektory są prostopadłe do wektora normalnych, równoległe do płaszczyzny kolizji.
+
+W normalnej symulacji nigdy nie potrzeba osobno modyfikować współczynników tarcia wzdłuż tych wektorów, gdyż powierzchnie obiektów mają równe współczynniki tarcia w każdym kierunku.
+Jednakże modyfikując je statycznie, lub dynamicznie można uzyskać bardzo ciekawe efekty.
+Instrukcja podaje przykład w którym, aby zamodelować tarcie opon samochodu prostopadle do kierunku jazdy, należy dynamicznie zmieniać współczynnik tarcia dla wektora $F_1$, lub $F_2$ w tym kierunku.
+Współczynnik tarcia prostopadle do kierunku jazdy może być liniowo zależny od prędkości.
+Spowoduje to, że im większa prędkość samochodu, tym boczna siła łatwiej zmieni tor jego jazdy, co ma odwzorowanie w rzeczywistości.
+
+Więcej informacji można znaleźć na stronie instrukcji maszyny symulacyjnej ODE \cite{ode_contact}.
+
+W naszym modelu modyfikujemy kierunek wektora $F_1$, oraz współczynniki tarcia w obu kierunkach, aby przybliżyć zachowanie się rolki.
+Ponieważ wektory $F_1$ i $F_2$ są określone w globalnym układzie współrzędnych, w każdej iteracji maszyny symulacji należy obrócić je względem aktualnej pozycji bazy.
+W doskonałym przypadku rolka obraca się całkowicie bez tarcia, a ruch wzdłuż jej osi jest niemożliwy.
+Można więc ustawić zerowy współczynnik tarcia w kierunku prostopadłym do osi, oraz nieskończenie duży dla wektora równoległego do osi.
+
+\begin{figure}[H]
+\centering
+ \includegraphics[width=0.8\textwidth]{graphics/base_vects.pdf}
+\caption{Kierunki wektorów dla których należy nadać współczynniki tarcia przy symulacji platformy. Tarcie w kierunku $F_1$ powinien być nieskończone, a w $F_2$ zerowe.}
+\end{figure} 
+
+Niestety w rzeczywistości rolki wykonane są ze śliskiego plastiku, który pozwala na mały ruch wzdłuż ich osi.
+Osie kolek również nie obracają się płynnie, trzeba użyć dużej siły, aby obrócić każdą z nich, pod naciskiem platformy tarcie jest jeszcze większe.
+Każda rolka w dodatku obraca się z innym tarciem wprowadzając kolejne zakłócenia.
+Podłoże także nie jest tu bez znaczenia.
+Należy zatem wystawić interfejs do łatwej zmiany współczynników tarcia, aby później dobierać odpowiednie wartości na podstawie zachowania rzeczywistego robota.
+
+Podobnie, jak w poprzednich przypadkach modelujemy tylko najniższą, dotykającą podłoża rolkę przybliżając ją kulą.
+Mamy zatem w miejscu każdego koła po jednej kuli z dynamicznie modyfikowanym tarciem, oraz przegub z motorem łączący odpowiednią część bazy z kołem.
+To najprostsza budowa modelu (a zatem najszybsza) z poprzednich.
+
+Takie rozwiązanie wiąże się z pewnym ryzykiem.
+Wymaga, aby symulator używał maszyny ODE, co zmniejsza przenośność modelu. ODE jest domyślnym symulatorem w Gazebo.
+Maszyna Bullet również liczy kolizje w ten sposób i ma modyfikowalne wektory, lecz nie daje podobnych wyników. Być może jest to spowodowane brakiem odpowiedniej konfiguracji.
+
+%TODO porównanie modelu z kinematycznym
 
 \section{Podsumowanie}
 W kolejnych przygotowaniach do pracy udało się przetestować różne sposoby modelowania bazy, znaleźć najlepszy działający i stworzyć modele.
