--- a/docs/readme
+++ b/docs/readme
@@ -1,7 +1,6 @@
-Pliki źródłowe PDFa.
-
 Do poruszenia:
 Opis platformy (wymiary itp)
+Porównanie ruchów
 
 Do zrobienia:
 Enkodery omnivelmy.
@@ -9,5 +8,6 @@ Masa omnivelmy.
 Masa kół.
 I omnivelmy i kół.
 Tarcie podłoża nazwane Flooria
+Porównanie ruchów nadawane przez program, nazwane ocznica.
 
 Przetestować Vrepowy sposób jeśli joint będzie miał własnego linka, którego pozycję już można resetować.
