--- a/docs/about.tex
+++ b/docs/about.tex
@@ -9,7 +9,7 @@ Należy tak opisać model, aby reagował na siły podobnie do rzeczywistej wersj
 To spowoduje, że możliwe będzie stworzenie jednego wspólnego programu sterującego do użycia zarówno w wirtualnej wersji, jak i fizycznej.
 
 Testowanie oprogramowania na prawdziwym obiekcie może prowadzić do jego uszkodzeń, dlatego wpierw trzeba się upewnić o poprawności projektowanych rozwiązań na bezpiecznej kopii wirtualnej.
-Rzeczywistość nie pozwala także na przeprowadzanie zaawansowanych scenariuszy środowiska testowego.
+Rzeczywistość nie pozwala także na przeprowadzanie zaawansowanych scenariuszy środowiska testowego, lub koszty jego wykonania są wysokie.
 Szybciej i taniej jest stworzyć wirtualne środowisko testowe, niż fizyczne, w dodatku porażka sterowników przy symulacji nie wpływa na zniszczenie robota w rzeczywistości.
 Dopiero przy osiągnięciu satysfakcjonującej jakości sterowania w symulacji wirtualnej można zastosować algorytmy sterowania do oryginalnego obiektu bez ryzyka uszkodzeń urządzenia.
 
@@ -27,9 +27,9 @@ W celu przybliżenia wyjścia takiego programu do rzeczywistego urządzenia, do 
 
 Jest to duża, prostokątna baza dookólna poruszająca się na czterech kołach szwedzkich.
 Koła są stałe, parami przyczepione do dwóch osi.
-Każde koło jest sterowane osobno przez podłączony bezpośrednio serwomotor, zatem może mieć prędkość i kierunek niezależny od pozostałych kół i kierunku poruszania się robota, oraz jego obrotu.
-Każdy z serwomotorów ma także wbudowany enkoder umożliwiający pomiar rzeczywistego kąta obrotu koła.
-Enkoder zwraca aktualny kąt i prędkość obrotu.
+Każde koło jest sterowane osobno przez podłączony bezpośrednio serwomotor, zatem może mieć prędkość i kierunek niezależny od pozostałych kół, kierunku poruszania się robota, oraz jego obrotu.
+Każdy z serwomotorów ma także wbudowany enkoder.
+Sterownik enkodera zwraca aktualny kąt i prędkość obrotu.
 
 \begin{figure}[H]
 \centering
@@ -41,6 +41,8 @@ Odpowiedni obrót kół względem bazy pozwala na jej ruch w dowolnym kierunku n
 Za ich pomocą da się także obracać bazą stojąc w miejscu, lub w trakcie ruchu po prostej.
 Na przykład, jeśli obracać tylko przeciwległymi kołami po przekątnej, system zacznie się poruszać po skosie bez zmiany kąta obrotu.
 A jeśli do tego dodamy obrót kół drugiej przekątnej w odwrotnym kierunku, wtedy pojazd zacznie się poruszać w bok pomimo faktu, że koła nie są skrętne i nie mogą ustawić się prosto do kierunku jazdy.
+Trasa po której porusza się obiekt przy stałej prędkości kół zawsze jest okręgiem, możemy uznać prostą za okrąg o nieskończonym promieniu, a punkt za okręg o zerowym.
+Wynika to z tego, że każdy obiekt, który ma jednostajną prędkość o kierunku w lokalnym układzie współrzędnych, oraz prędkość kątową będzie się poruszał po takiej krzywej.
 
 \begin{figure}[H]
 \centering
@@ -52,13 +54,17 @@ Podstawa ma za zadanie transportować wydziałowego robota manipulującego Velma
 Velma to wysoki i bardzo ciężki robot wyposażony w dwa chwytaki na ramionach o licznych przegubach.
 Taka budowa wymaga szerokiej podstawy, aby zachować wystarczająco dużą równowagę.
 Jeżdżąc na tej podstawie robot może się przemieszczać i obracać w dowolnym kierunku, aby uzyskać lepszy dostęp do manipulowanych przedmiotów.
-Dodatkowe czujniki laserowe umieszczone tuż nad postawą odpowiadają za wykrywanie kolizji.
+Dodatkowe czujniki laserowe umieszczone tuż nad postawą odpowiadają za wykrywanie kolizji i lokalizację.
 
 Platforma jest niesymetrycznie podzielona w poprzek na dwie niezależne części.
 Przegub o jednym stopniu swobody (tzw. zawias) jest jedynym łącznikiem pomiędzy tymi dwoma fragmentami.
 Zadaniem tego przegubu jest niwelować niedoskonałości terenu, aby każde koło dociskało do podłoża z taką samą siłą, jak po drugiej stronie osi.
 Bez tego zawiasu nierówny teren uniemożliwiałby sprawne sterowanie platformą na skutek nierównego tarcia kół tej samej osi, powodując nieplanowany skręt.
 Niedeterministyczne tarcie kół jest niewykrywalne w bezpośredni sposób, więc należy je wyeliminować na przykład za pomocą takiego przegubu.
+
+Platforma podatna jest na losowy ruch przy rozpoczynaniu jazdy i hamowaniu.
+Jest to spowodowane tym, że asymetria rolek będzie nadawać kołom różne siły, a w związku z tym różne prędkości, co w efekcie może powodować niedeterministyczny ruch.
+Należy także wziąć tutaj pod uwagę nieprzewidywalne opory, jak nierówne tarcie rolek o powierzchnię \cite{braking}.
 
 \begin{figure}[H]
 \centering
@@ -78,12 +84,18 @@ Niedeterministyczne tarcie kół jest niewykrywalne w bezpośredni sposób, wię
 \caption{Platforma mobilna widziana od tyłu.}
 \end{figure} 
 
+Platforma posiada 3 stopnie swobody. Pierwszym i drugim jest ruch bez obrotu w osiach X i Y.
+Trzecim stopniem jest dowolny obrót po płaszczyźnie podłoża.
+
 \section{Koła szwedzkie}
-Koła szwedzkie, zwane także kołami mecanum, to specjalne koła z dodatkowymi rolkami na obwodzie ustawionymi pod kątem $45^\circ$ do osi koła.
+Koła szwedzkie, zwane także kołami Mecanum, to specjalne koła z dodatkowymi rolkami na obwodzie ustawionymi pod kątem $45^\circ$ do osi koła.
 Rolki są pasywne i obracają się niezależnie od siebie. Każde koło posiada 12 takich rolek.
 Ich osie ustawione są w ten sposób, że osie rolek dwóch kół z tej samej strony robota przecinają się pod kątem prostym.
 Innymi słowy, robot ma identycznie ustawione koła na przeciwległych wierzchołkach, i razem ustawione są w kształt litery \emph{X} patrząc na nie z góry.
 Warto pamiętać, że oś aktualnie dolnej rolki jest prostopadła do osi górnej rolki.
+
+Istnieje również odwrotna odmiana ustawienia kół, w której rolki tworzą literę \emph{O}, czyli oś przednia jest zamieniona z tylną, lub jakby cała platforma była odwrócona do góry nogami.
+Ten drugi sposób także pozwala na ruch wielokierunkowy, ale nie jest tak często stosowany \cite{paletobot}.
 
 \begin{figure}[H]
 \centering
@@ -95,8 +107,20 @@ Każde koło ma 3 stopnie swobody. Pierwszym jest obrót całego koła wzdłuż 
 Drugim są rotacje pojedynczych rolek, a trzecim poślizg obrotowy w miejscu styku rolki z podłożem \cite{kinematic_modeling}.
 
 Na podstawie rysunku widać, że krzywizna rolki jest tak ustawiona, aby punkt kontaktu rolki z podłożem płynnie przechodził na następną rolkę w trakcie obrotu.
+Celem jest utrzymanie równej odległości osi od płaszczyzny podłoża.
 Nie powinno być efektu przeskoku z jednej rolki na drugą, gdyż to wprowadza nierówne tarcie i losowe poślizgi.
-Koło można wpisać w kulę i każda rolka będzie dotykać jej sfery na całej swojej długości.
+Pojedyncza rolka zawiera się w paraboloidzie, jest tworzona przez skomplikowane wzory.
+Zazwyczaj przybliża się ją torusem w celu uproszczenia produkcji \cite{rollers}.
+
+Istnieją także inne budowy kół, złożone z wielu małych rolek tak, aby w każdym momencie kilka rolek dotykało podłoża.
+Można także przystawić kilka powyższych kół do siebie w jednym kole.
+Przydatne jest to dla robotów transportujących duże masy, gdyż zmniejsza to obciążenie pojedynczych rolek.
+Niestety taka budowa jest chroniona patentem, więc pojedyncze koło z wygasłym patentem jest jedynym popularnie używanym \cite{paletobot}.
+
+Podstawowym problemem technologii jest skomplikowana budowa, ale także ślizganie się kół po powierzchni.
+Odległość osi od płaszczyzny nieznacznie zmienia się przy przenoszeniu ciężaru z rolki na rolkę, co przy dużych prędkościach powoduje drgania i jeszcze większe błędy pomiarów.
+Środkowy przegub zmniejsza ich przenoszenie na resztę platformy.
+Poślizg kół powoduje, że enkodery nie mogą być jedynymi czujnikami wyznaczającymi pozycję bazy, gdyż są na to za mało dokładne \cite{heavy}.
 
 \section{Składniki systemu}
 Środowisko symulacyjne składa się z kilku odrębnych modułów, które komunikują się ze sobą poprzez specjalne interfejsy wykorzystujące kolejki wiadomości.
@@ -153,7 +177,7 @@ Implementowany podobnie do sterownika silników ma za zadanie konwertować surow
 W tym miejscu usuwa się błędy grube, niweluje stałe na podstawie kalibracji, wygładza szum i interpretuje dane, aby pozyskać wymagane przez wyższe warstwy informacje.
 
 Przykładowo czujniki laserowe zwracają jedynie ciąg pomiarów, ale to do tego programu należy interpretacja wykrytych kształtów, łączenie punktów i obróbka do formatu zrozumiałego dla wyższych podzespołów.
-Większość zaawansowanych receptorów posiada owe układy cyfrowe i programy, są wbudowane w urządzenie.
+Większość zaawansowanych receptorów posiada owe układy cyfrowe i programy wbudowane w urządzenie.
 Dostarczone przez producenta tak samo, jak sterowniki efektorów.
  
 Symulując ten element budujemy program generujący dane na podstawie aktualnego stanu maszyny do symulacji w sposób, w jaki działa czujnik w rzeczywistości.
@@ -174,7 +198,7 @@ Programy sterujące mogą być implementowane w językach wysokopoziomowych, naw
 Co więcej, często się zdarza, że odpowiednie składowe programu bazują na różnych technologiach.
 
 Środowisko symulacyjne powinno zapewnić pełną abstrakcję komunikacji tego modułu.
-Oznacza to, że nie zależnie, czy program działa na rzeczywistym robocie, czy symulacji wirtualnej, zawsze powinien móc komunikować się i otrzymywać dane w tym samym formacie.
+Oznacza to, że niezależnie, czy program działa na rzeczywistym robocie, czy symulacji wirtualnej, zawsze powinien móc komunikować się i otrzymywać dane w tym samym formacie.
 W idealnym świecie program nie powinien mieć możliwości stwierdzić, czy steruje symulacją, czy oryginałem.
 
 \section{Technologie}
@@ -199,7 +223,7 @@ Symulator oprócz tego ma wbudowany edytor modeli w którym możemy składać od
 Edytor budynków pozwala na stawianie wirtualnych ścian, korytarzy, drzwi i ogólnego otoczenia w którym roboty mogą pracować i być symulowane.
 Jakość wykonania tych składników pozostawia wiele do życzenia, brak jest tak podstawowych funkcji, jak cofanie ruchu.
 Dlatego lepiej jest definiować model we wczytywanym pliku tekstowym.
-Również tworząc modele "`offline"' w ten sposób mamy nad nimi pełną kontrolę, a parametry można ustawiać z dowolną dokładnością.
+Również tworząc modele poza edytorem w ten sposób mamy nad nimi pełną kontrolę, a parametry można ustawiać z dowolną dokładnością.
 
 Gazebo przyjmuje modele w specjalnym formacie SDF. Jest to ustandaryzowany, zdefiniowany zewnętrznie format do opisywania składników robotów i czujników.
 Dzięki temu taki plik może być użyty także gdzie indziej, pod warunkiem przestrzegania standardu.
@@ -215,6 +239,10 @@ Interfejs jest dopracowany i przestrzega wielu ustawień systemowych, jak DPI.
 Uruchamianie jest proste i nie wymaga dodatkowych ustawień, uruchamiania skryptów inicjalizujących, tworzenia odpowiednich katalogów, czy definiowania zmiennych systemowych.
 Standardowo, jak inne programy tworzy ukryty katalog w katalogu domowym użytkownika, gdzie znajdują się wszystkie modele i logi.
 Czasami trzeba używać tego katalogu, aby umieścić tam swoje modele, które Gazebo będzie automatycznie umieszczał w symulacji.
+
+Gazebo jest składnikiem systemu ROS, kod źródłowy jest dzielony w ramach wspólnej organizacji, chociaż różne osoby odpowiadają za rozwój tych oprogramowań.
+Kolejne wersje Gazebo są powiązane z wersjami ROSa, nie można użyć przestarzałej wersji Gazebo z nowszym ROSem i odwrotnie.
+Symulator można zainstalować osobno, lub jako jeden z pakietów ROSa.
 
 \subsection{V-Rep}
 Program do pobrania z \cite{vrep_website}. Duże i skomplikowane środowisko reklamujące się wieloma zaawansowanymi mechanizmami i funkcjami.
@@ -279,8 +307,7 @@ Z drugiej jednak strony wirtualizacja systemu operacyjnego z ROS bardzo ogranicz
 Do tworzenia oprogramowania na systemach Unixowych można użyć dowolnych edytorów, gdyż standardowo wszystko jest potem kompilowane za pomocą narzędzi wiersza poleceń i skryptów.
 Jednak warto sobie ułatwić pracę zaawansowanymi środowiskami graficznymi.
 \begin{description}
- \item[Gazebo] będzie użyty do symulacji z jego domyślną maszyną ODE. Przełączenie maszyny symulacyjnej wiąże się z rekompilacją programu ze źródła, dlatego zostaną one sprawdzone po przetestowaniu domyślnej.
- ODE jest szybkie, dobrze napisane i nie ma wielu zaawansowanych niepotrzebnych nam funkcji, jak Bullet.
+ \item[Gazebo] będzie użyty do symulacji z jego domyślną maszyną symulacji fizyki ODE.
  \item[ROS] użyty zostanie jako gówna platforma programistyczna. Pod łatwą komunikację z jego modułami należy budować sterowniki wirtualne.
  \item[Atom] jest popularnym uniwersalnym edytorem tekstowym. Dzięki rozszerzaniu przez wtyczki dobrze się sprawdza przy obróbce plików XML i skryptów.
  Będzie użyty do konstrukcji modelu.
@@ -290,7 +317,7 @@ Jednak warto sobie ułatwić pracę zaawansowanymi środowiskami graficznymi.
  \item[Code::Blocks lub Eclipse] nadają się do pisania kompilowalnego kodu wtyczek. Można podłączyć je pod komendę \texttt{make} i korzystać z mechanizmów interpretacji błędnych wierszy, graficznego debugowania i podobnych.
  \item[Bash] będący bardzo popularnym językiem skryptowym nadaje się do automatyzacji pracy i uruchamiania wielu programów w kontrolowany i szybki sposób.
  Uniwersalne narzędzie pomagające w różnych miejscach.
- \item[Git] --- program kontroli wersji jest podstawowym narzędziem programisty. Kod należy dla bezpieczeństwa umieszczać także w usłudze GitHub.
+ \item[Git] jest narzędziem kontroli wersji, które jest wskazane w każdym projekcie informatycznym. Kod należy dla bezpieczeństwa umieszczać także w usłudze GitHub.
  \item[Virtualbox] do ewentualnej wirtualizacji systemu operacyjnego z ROS, lub uruchomienie osobnego systemu z dysku zewnętrznego.
 \end{description}
 
@@ -324,9 +351,9 @@ Ten program dostarczy funkcji, aby wyższy sterownik robota mógł użyć tego m
 Istnieją już wcześniejsze modele jeżdżących robotów na kołach szwedzkich.
 Można z nich brać przykład i sugerować się źródłami kodu i modeli.
 
-Kuka Youbot jest popularnym robotem tego typu. Jego modele są domyślnie dostępne zarówno w Gazebo, jak i w V-Rep.
-Tylko w przypadku V-Rep mamy wstępny sterownik do którego wysyłamy odpowiednie wartości kierunku, a on obraca kołami w ten sposób, aby spełnić żądanie.
-Wersja dla Gazebo jest statycznym modelem, jego efektory nie są zaimplementowane.
+Kuka Youbot jest popularnym robotem wielokierunkowym. Jego modele są domyślnie dostępne zarówno w Gazebo, jak i w V-Rep.
+Tylko w przypadku V-Rep mamy wstępny sterownik do którego wysyłamy odpowiednie wartości kierunku, a on nadaje takie prędkości kołom, aby poruszać się w zadanym kierunku.
+Wersja dla Gazebo jest statycznym modelem z błędnie ustanowionymi przegubami, jego efektory nie są zaimplementowane.
 
 Te profesjonalne modele także pomogą przy wstępnej weryfikacji zachowania się naszego modelu, czy nie zachowuje się nadzwyczaj dziwnie w pierwszych fazach projektu.
 
