--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -11,6 +11,31 @@
 Mihai Olimpiu Tătar, Cătălin Popovici, Dan Mândru, Ioan Ardelean, Alin Pleşa ``Design and development of an autonomous omni-directional mobile robot with Mecanum wheels'',
 Conference: 2014 IEEE International Conference on Automation, Quality and Testing, Robotics (AQTR)
 
+% paletobot.pdf
+\bibitem{paletobot}
+Matthieu LAMY ``Mechanical development of an automated guided vehicle'',
+Master of Science Thesis MMK 2016:153 MKN 171,
+KTH Industrial Engineering and Management,
+Machine Design,
+SE-100 44 STOCKHOLM
+
+% matematyka_rolki.pdf
+\bibitem{rollers}
+Anton Gfrerrer ``Geometry and kinematics of the Mecanum wheel'',
+Graz University of Technology, Institute of Geometry, Kopernikusgasse 24, 8010 Graz, Austria,
+Computer Aided Geometric Design 25(9):784-791
+
+% silny_robot.pdf
+\bibitem{heavy}
+Li Xie, Christian Scheifele, Weiliang Xu, Karl A. Stol ``Heavy-Duty Omni-Directional Mecanum-Wheeled Robot for Autonomous Navigation'',
+DOI: 10.1109/ICMECH.2015.7083984
+
+% hamowanie.pdf
+\bibitem{braking}
+Viktor Kálmán ``On modeling and control of omnidirectional wheels'',
+PhD. dissertation, Budapest University of Technology and Economics,
+Department of Control Engineering and Information Technology
+
 \bibitem{gazebo_website}
 Strona internetowa symulatora Gazebo. \\
 \url{http://gazebosim.org}
