Dodaj zdjęcie Velmy

--- a/docs/about.tex
+++ b/docs/about.tex
@@ -18,7 +18,6 @@ Wirtualizacja czujników polega na generowaniu danych na podstawie symulacji.
 W celu przybliżenia wyjścia takiego programu do rzeczywistego urządzenia, do generowanych danych zwykle dodaje się szum, oraz błędy.
 
 \section{Wielokierunkowa platforma mobilna}
-
 \begin{figure}[H]
 \centering
  \includegraphics[width=0.8\textwidth]{graphics/base_photo.png}
@@ -55,6 +54,12 @@ Velma to wysoki i bardzo ciężki robot wyposażony w dwa chwytaki na ramionach 
 Taka budowa wymaga szerokiej podstawy, aby zachować wystarczająco dużą równowagę.
 Jeżdżąc na tej podstawie robot może się przemieszczać i obracać w dowolnym kierunku, aby uzyskać lepszy dostęp do manipulowanych przedmiotów.
 Dodatkowe czujniki laserowe umieszczone tuż nad postawą odpowiadają za wykrywanie kolizji i lokalizację.
+
+\begin{figure}[H]
+\centering
+ \includegraphics[width=0.5\textwidth]{graphics/velma.png}
+\caption{Robot manipulacyjny Velma.}
+\end{figure} 
 
 Platforma jest niesymetrycznie podzielona w poprzek na dwie niezależne części.
 Przegub o jednym stopniu swobody (tzw. zawias) jest jedynym łącznikiem pomiędzy tymi dwoma fragmentami.
