--- a/docs/abstract.tex
+++ b/docs/abstract.tex
@@ -1,7 +1,9 @@
 \begin{abstract}
 Ta praca opisuje projektowanie i budowę środowiska symulacyjnego dla wielokierunkowej platformy mobilnej poruszającej się za pomocą kół szwedzkich.
-Platforma i robot, którego ma wozić są własnością wydziału Elektroniki i Technik Informacyjnych na Politechnice Warszawskiej.
-Celem jest przygotowanie jak najdokładniejszej kopii oryginału, aby użyć jej zewnętrznym w programie sterującym bez jego modyfikacji.
+
+Platforma jest bazą mobilną dla dwuramiennego robota Velma. 
+Celem pracy jest stworzenie możliwie dokładnego modelu symulacyjnego rzeczywistej bazy mobilnej.
+Model ten ma służyć do wstępnych badań algorytmów planowania ruchu i sterowania robotem mobilnym.
 
 Rozpatrzone są tutaj wymagania i problemy przy tworzeniu każdego ze składników środowiska.
 Na system składają się wirtualne efektory i receptory obsługujące odpowiednią maszynę symulacyjną.
