--- a/docs/main.tex
+++ b/docs/main.tex
@@ -1,17 +1,22 @@
 \documentclass[a4paper,12pt]{report}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{wrapfig}
+\usepackage[polish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{polski}
-\usepackage[polish]{babel}
+
+\usepackage{graphicx}
+\usepackage{amsmath}
+\usepackage{wrapfig}
 \usepackage{hyperref}
 \usepackage{gensymb}
 \usepackage{textcomp}
 \usepackage{float}
 \usepackage{listings}
+\usepackage{caption}
+\usepackage{cleveref}
 \usepackage[ampersand]{easylist}
+
+\input{macros.tex}
 
 \begin{document}
 \input{title.tex}
