--- a/docs/model.tex
+++ b/docs/model.tex
@@ -6,10 +6,13 @@ Dodatkowo stworzenie platformy kinematycznej pozwalało na porównanie szybkie o
 \begin{figure}[H]
 \centering
  \includegraphics[width=0.8\textwidth]{graphics/base_dims.pdf}
- \label{graphics:base_dims}
 \caption{Wielkości używane we wzorach.}
+\label{fig:base_dims}
 \end{figure} 
-\begin{tabular}{l c l}
+
+\begin{table}
+\centering
+\begin{tabular}{c c l}
 Oznaczenie & Wartość & Opis \\
 \hline
 $r$ & 0,1 m & Promień koła w najszerszym miejscu na środku. \\
@@ -20,6 +23,10 @@ $v_x$ & & Prędkość transwersalna w osi X. \\
 $v_y$ & & Prędkość transwersalna w osi Y. \\
 $\omega_z$ & & Prędkość kątowa w osi Z, wektor skierowany w górę. \\
 \end{tabular}
+\caption{Opisy i wartości symboli używanych we wzorach i rysunkach.}
+\label{tab:dims}
+\end{table}
+
 
 \section{Sposób zapisu w formacie SDF}
 \emph{Simulation Description Format} (SDF) jest formatem XML pozwalającym na określenie elementów i zależności pomiędzy nimi w przestrzeni trójwymiarowej, w szczególności budowy i rozmieszczenia robotów.
