--- a/docs/readme
+++ b/docs/readme
@@ -1,6 +1,7 @@
 Do poruszenia:
 Opis platformy (wymiary itp)
 Info, że przesunięcie środka ciężkości nie zmieniło eksperymantów.
+Naprawić model widoku z góry (wyrenderować na nowo)
 
 Do zrobienia:
 Enkodery omnivelmy.
