--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -2,9 +2,9 @@
 
 % stosowanie_modelu.pdf
 \bibitem{kinematic_modeling}
- P. Muir, C. Neuman ``Kinematic modeling for feedback control of an omnidirectional wheeled mobile robot'', 
- Proceedings, IEEE International Conference in Robotics and Automation, 
- Vol 4. pp. 1772-1778, 1987.
+P. Muir, C. Neuman ``Kinematic modeling for feedback control of an omnidirectional wheeled mobile robot'', 
+Proceedings, IEEE International Conference in Robotics and Automation, 
+Vol 4. pp. 1772-1778, 1987.
 
 % koła.pdf
 \bibitem{wheels}
@@ -17,7 +17,7 @@ Matthieu LAMY ``Mechanical development of an automated guided vehicle'',
 Master of Science Thesis MMK 2016:153 MKN 171,
 KTH Industrial Engineering and Management,
 Machine Design,
-SE-100 44 STOCKHOLM
+SE-100 44 Sztokholm
 
 % matematyka_rolki.pdf
 \bibitem{rollers}
@@ -35,6 +35,12 @@ DOI: 10.1109/ICMECH.2015.7083984
 Viktor Kálmán ``On modeling and control of omnidirectional wheels'',
 PhD. dissertation, Budapest University of Technology and Economics,
 Department of Control Engineering and Information Technology
+
+% ruchome_osie.pdf
+\bibitem{extra_axis}
+Jae-Bok Song, Kyung-Seok Byun
+``Design and Control of a Four-Wheeled Omnidirectional Mobile Robot with Steerable Omnidirectional Wheels'',
+Journal of Robotic Systems 21(4):193-208, Kwiecień 2004
 
 \bibitem{gazebo_website}
 Strona internetowa symulatora Gazebo. \\
